prevent scrolling content being visible in appbar

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,8 +3,8 @@
     --app-header-height: 146px;
 }
 
-main {
-    padding-top: 0;
+main.container {
+    padding-top: 0 !important;
 }
 
 .appbar {
@@ -19,11 +19,11 @@ main {
 
     padding-left: var(--pico-spacing);
     padding-right: var(--pico-spacing);
-    padding-top: var(--pico-spacing);
     padding-bottom: 0.5rem;
 
     margin-left: calc(var(--pico-spacing) * -1);
     margin-right: calc(var(--pico-spacing) * -1);
+    margin-top: var(--pico-spacing);
 
     background: var(--pico-background-color);
     border-bottom: 1px solid var(--pico-muted-border-color);
